# L2chain

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md
baseline/: Cargo.toml
baseline/src/: lib.rs  node.rs
baseline/src/network/: raft.rs
chain/: Cargo.toml
chain/src/: config.rs  db.rs  lib.rs  role.rs
common-utils/: Cargo.toml
common-utils/src/: lib.rs  path.rs  serde.rs
configs/baseline/nodes/: pow_example.toml
core/: Cargo.toml
core/src/: basic.rs  config.rs  hashes.rs  lib.rs  utils.rs
core/src/basic/: address.rs  dapp_id.rs  error.rs
enclaves/execution_enclave/: Cargo.toml
enclaves/simulation_enclave/: Cargo.toml
l2chain/: Cargo.toml
network/: Cargo.toml
network/src/p2p/: config.rs  control.rs
scripts/: install_sgx_driver.sh  requirements.txt
scripts/figures/: cache_group.py  cross_app_lat.py  cross_app_tps.py  dapp_lat.py  dapp_tps.py  failure_pow.py  failure_raft.py  thread.py  workload_lat.py  workload_tps.py
scripts/simulator/: accumulator.py  dappnode.py  enclave.py  simulator.py  structures.py  validator.py
scripts/simulator/cfgs/: config.yaml
scripts/simulator/enclaves/: Makefile
scripts/simulator/enclaves/trusted/: Cargo.toml  Enclave.config.xml  Enclave.edl  Makefile  Xargo.toml  x86_64-unknown-linux-sgx.json
scripts/simulator/enclaves/trusted/src/: lib.rs
scripts/simulator/enclaves/untrusted/: Cargo.toml
scripts/simulator/enclaves/untrusted/src/: main.rs
witness_cache/: Cargo.toml
witness_cache/scripts/: optimization.py
witness_cache/src/: exps.rs  main.rs
