[package]
name = "chain"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
kvdb = "0.10"
kvdb-rocksdb = "0.14"
tokio = { version = "1", features = ["full", "parking_lot"] }
once_cell = "1"

core = { path = "../core" }
common-utils = { path = "../common-utils"}
