[package]
name = "l2chain"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full", "parking_lot"] }
structopt = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1"
regex = "1.5"
core = { path = "../core" }
chain = { path = "../chain" }
