[package]
name = "witness_cache"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
accumulator = { git = "https://github.com/xzhflying/accumulator.git", branch = "master" }
stopwatch = "0.0.7"
rand = "0.8.4"
