[package]
name = "untrusted"
version = "1.0.0"
build = "build.rs"

[dependencies]
sgx_types = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_urts = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }

[dependencies.pyo3]
version = "0.17.3"
features = ["auto-initialize"]

[patch.'https://github.com/apache/teaclave-sgx-sdk.git']
sgx_types = { path = "../../../sgx_types" }
sgx_urts = { path = "../../../sgx_urts" }
